# openfortivpn

./: CMakeLists.txt  Makefile.am  README.md
.github/workflows/: codespell.yml  openfortivpn.yml  release.yml
doc/: openfortivpn.1.in
installer/: README.md
openfortitray/: .gitignore  AGENTS.md  AUTH.md  DECISIONS.md  DESIGN.md  README.md  SPEC.md  TASKS.md  WIREFRAMES.md  pyproject.toml  requirements.txt
openfortitray/packaging/: build.py  generate_icon.py  openfortitray-linux.spec  openfortitray-macos.spec  openfortitray-windows.spec
openfortitray/src/openfortitray/: __init__.py  __main__.py  app.py
openfortitray/src/openfortitray/core/: autostart.py  cert_fetch.py  connection_manager.py  elevation.py  profile.py  profile_store.py  secret_store.py  single_instance.py  sleep_wake.py  state_machine.py  vpn_binary.py
openfortitray/src/openfortitray/ui/: cert_trust_dialog.py  credential_dialogs.py  log_viewer.py  main_window.py  notifications.py  profile_editor.py  settings_dialog.py  signal_bridge.py  tray.py
openfortitray/src/openfortitray/ui/resources/: __init__.py
openfortitray/tests/: test_profile_store.py  test_secret_store.py  test_state_machine.py
src/: compat_win32.h  config.c  config.h  http.c  io_win.c  ipv4_win.c  log_win.c  main.c  totp.c  totp.h  tunnel_win.c  wintun.h
tests/: test_totp.c
tests/ci/: install_openssl.sh
tests/lint/: checkpatch.sh
