[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfortitray"
version = "0.1.0"
description = "Minimalist cross-platform GUI for openfortivpn"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }
dependencies = [
    "PySide6>=6.7",
    "keyring>=25.0",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
]

[project.scripts]
openfortitray = "openfortitray.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
